--- a/firstPlay/install_finger.yml
+++ b/firstPlay/install_finger.yml
@@ -1,7 +1,7 @@
 ---
 
-- hosts: app
-  remote_user: root
+- hosts: all
+  remote_user: jboss
   tasks:
   - name: isntall package finger
     become: yes
