--- a/firstPlay/install_finger.yml
+++ b/firstPlay/install_finger.yml
@@ -6,4 +6,4 @@
   - name: isntall package finger
     become: yes
     become_method: sudo
-    apt: pkg=finger state=present
+    yum: pkg=finger state=present
