--- a/secondPlay/ansible.cfg
+++ b/secondPlay/ansible.cfg
@@ -94,7 +94,7 @@ roles_path    = /etc/ansible/roles:/usr/share/ansible/roles
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-#remote_user = root
+remote_user = jboss
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
