--- a/secondPlay/main.yml
+++ b/secondPlay/main.yml
@@ -3,5 +3,5 @@
   hosts: all
   vars_files:
    - vars/file.yml:
-- include_playbook: 1.yml
-- include_playbbok: 2.yml
+- include: 1.yml
+- include: 2.yml
